--- a/TP 2/index.css
+++ b/TP 2/index.css
@@ -47,3 +47,27 @@ main {
 form {
     text-align: center;
 }
+
+.cuadrado {
+    width: 500px;
+    height: 500px;
+    background-color:red ;
+}
+
+.cuadrado {
+    width: 500px;
+    height: 500px;
+    background-color:blueviolet ;
+}
+
+.cuadrado {
+    width: 500px;
+    height: 500px;
+    background-color:red ;
+}
+
+.cuadrado {
+    width: 500px;
+    height: 500px;
+    background-color:red ;
+}
