--- a/TP 2/index.css
+++ b/TP 2/index.css
@@ -1,73 +1,42 @@
-main {
+* {margin: 0; padding: 0;}
+
+body {
     background-color: black;
-    margin: 0;
-    padding: 0;
+    padding-top: 10vh;
 }
 
-
-
-.izquierda {
-   display: inline-block;
-   text-align: center;
-   height: 100vh;
-   margin: 0;
-   padding: 0;
+.container-login {
+    width: 50% ;
+    height: auto;
+    padding: 20px 30px;
+    background: linear-gradient(0deg, rgba(0,0,0,1) 23%, rgba(89,14,143,1) 82%);
+    border-radius: 10px;
+    margin: auto;
+       
 }
 
-.izquierda img {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 50vw;
-}
-
-
-
-.derecha {
-    display: inline-block;
+ul.list {
+    list-style-type: none;
     text-align: center;
-    height: 100vh;
-    display: inline-block;
-}
 
-.cuadrado { 
-    display: inline-block;
+
+ }
+
+
+ ul.list li {
+    width: 100px;
+      
+
+ }
+
+ ul.list li input {
+    width: 100px;
     text-align: center;
-    background-color: floralwhite;
-    height: 500px;
-    width: 500px;
+    padding: 1px
 
-}
-.cuadrado img {
-  display: inline-block;
-  height: 30%;
-  width: 30%;
-}
+ }
 
-form {
-    text-align: center;
-}
+ ul.list li input [type="button"] {
+    background-color: blueviolet;
 
-.cuadrado {
-    width: 500px;
-    height: 500px;
-    background-color:red ;
-}
-
-.cuadrado {
-    width: 500px;
-    height: 500px;
-    background-color:blueviolet ;
-}
-
-.cuadrado {
-    width: 500px;
-    height: 500px;
-    background-color:red ;
-}
-
-.cuadrado {
-    width: 500px;
-    height: 500px;
-    background-color:red ;
-}
+ }
