--- a/TP 2/index.css
+++ b/TP 2/index.css
@@ -1,14 +1,21 @@
 * {margin: 0; padding: 0;}
 
 body {
-    background-color: black;
-    padding-top: 10vh;
+   padding-top: 10vh;
+}
+
+.fondo {
+   background-image:url(./img/Hamacas.jpg)  ;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: contain;
+
 }
 
 .container-login {
     width: 50% ;
     padding: 20px 30px;
-    background: linear-gradient(0deg, rgba(0,0,0,1) 23%, rgba(89,14,143,1) 82%);
+    background: lightblue;
     border-radius: 10px;
 
        
