--- a/TP 2/index.css
+++ b/TP 2/index.css
@@ -1,3 +1,8 @@
+@font-face{
+   font-family: "Raleway";
+   src: url(font/Raleway-Medium.ttf)
+}
+
 * {margin: 0; padding: 0;}
 
 body {
@@ -13,35 +18,49 @@ body {
    display: flex;
    justify-content: left;
    align-items: center;
-
+   width: 100%;
+   height: 100vh;
 }
 
 .container-login {
    display: inline-block;
-   justify-content: center;
    background: lightblue;
    border-radius: 10%;
+   height: 60vh;
+   width: 20vw;
+   margin-left: 100px ;
 
-       
+   
 }
 
 .icon {
-   display: inline-block;
-   border: 5px solid  ;
-   border-radius: 10;
+   text-align: center;
+   
    padding: 0;
    margin: 0 ;
-   size: 15% ;
+   
    
 }
 
 .icon img {
-   size: 10%;
+   border-radius: 100px;
+   border: 1px coral solid ;
+   margin-top: 40px;
+   margin-bottom: 20px;
+   height: 40%;
+   width: 40%;
 
 }
 
-ul.list {
+.list{
+   margin-top: 20px;
+   font-family: "Raleway";
+   
+}
+
+.list li{
     list-style-type: none;
     text-align: center;
+    margin: 5px; 
 
  }
